<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Coro-No</string>
    <string name="title_activity_places" translatable="false">Map</string>
    <string name="notifyUser">Notify user</string>
    <string name="dailyTip">Daily tip</string>
    <string name="save">Save</string>
    <string name="getLocation">Get location</string>
    <string name="openPlaces">Open maps</string>
    <string name="settings">Settings</string>
    <string name="addMarker">Add marker</string>
    <string name="check">Check</string>
    <string name="english" translatable="false">English</string>
    <string name="serbianLatin" translatable="false">Latinica</string>
    <string name="serbianCyrillic" translatable="false">Ћирилица</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="backToMenu">Are you sure you want to go back to the main menu?</string>
    <string name="quitApp">Are you sure you want to quit the app?</string>
    <string name="cancel">Cancel</string>
    <string name="markerName">How do you want to call your current location?</string>
    <string name="info">Info</string>
    <string name="homeLocation">Is this your home location?</string>
    <string name="rulebookTitle">Epidemiological measures</string>
    <string name="rulebookText">Avoid touching your face, mouth, nose and eyes.\n\nUse masks which cover your nose and mouth while staying in closed spaces.\n\nVentilate rooms you stay in.\n\nWash your hands with soap and water or use a 70% alcohol based disinfectanat.</string>
    <string name="setAppLanguage">Change the app\'s language</string>
    <string name="toggleNotifications">Toggle notifications</string>
    <string name="trackLocation">Track the device\'s location</string>
    <string name="sendDailyNotifications">Send daily notifications with suggestions and tips</string>
    <string name="serviceNotificationText">Caring about your health…</string>
    <string name="noLocationNameToast">Input the name of the location!</string>
    <string name="deniedLocationPermissionsToast">Denied location permissions</string>
    <string name="retryCurrentLocationToast">Current location not found, try again</string>
    <string name="gpsToast">GPS location is required for adding a new location</string>
    <string name="locationDeletedToast">Location deleted</string>
    <string name="help">Help</string>
    <string name="addMarkerHelp">Add your home/frequent locations.</string>
    <string name="currentLocationHelp">Zoom in on your current location.</string>
    <string name="generalHelp">Delete a location by holding the name of a location marker.\n\nYou can toggle location tracking and particular notifications in the settings.</string>
    <string name="renameLocationToast">Input a unique location name</string>
</resources>