<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings_background"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".Settings">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/setLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40sp"
        android:text="@string/setAppLanguage"
        android:textAlignment="center"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20sp"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/englishButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0.33"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:background="@drawable/uk_flag"
            android:scaleType="fitCenter"
            android:contentDescription="@string/english" />

        <Button
            android:id="@+id/serbianLatinButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0.34"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:background="@drawable/serbian_flag"
            android:scaleType="fitCenter"
            android:text="@string/serbianLatin"
            android:textColor="#000000" />

        <Button
            android:id="@+id/serbianCyrillicButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:layout_weight="0.33"
            android:adjustViewBounds="true"
            android:background="@drawable/serbian_flag"
            android:scaleType="fitCenter"
            android:text="@string/serbianCyrillic"
            android:textColor="#000000" />

    </LinearLayout>

    <TextView
        android:id="@+id/setNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15sp"
        android:text="@string/toggleNotifications"
        android:textAlignment="center"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20sp">

        <ToggleButton
            android:id="@+id/notificationOne"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="#00FFFFFF"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/notificationTwo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="#00FFFFFF"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/notificationThree"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="#00FFFFFF"
            android:textOff=""
            android:textOn="" />

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/trackerSwitch"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:paddingTop="20sp"

        android:text="@string/trackLocation"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:theme="@style/SwitchStyle" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dailyNotificationsSwitch"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:paddingTop="20sp"

        android:text="@string/sendDailyNotifications"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:theme="@style/SwitchStyle" />
</LinearLayout>