<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/help_background"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.16"
        android:gravity="center"
        android:text="@string/help"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:adjustViewBounds="true"

            android:background="#00FFFFFF"
            android:contentDescription="@string/no"
            android:scaleType="fitCenter"

            android:src="@drawable/add_location_v2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:text="@string/addMarkerHelp"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:adjustViewBounds="true"

            android:background="#00FFFFFF"
            android:contentDescription="@string/no"
            android:scaleType="fitCenter"

            android:src="@drawable/get_current_location" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:text="@string/currentLocationHelp"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.83"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/generalHelp"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="64dp"
        android:layout_height="64dp"

        android:layout_gravity="end"
        android:layout_weight="0.02"

        android:adjustViewBounds="true"

        android:background="#00FFFFFF"
        android:contentDescription="@string/no"
        android:scaleType="fitCenter"

        android:src="@drawable/cross"
        tools:ignore="RelativeOverlap" />
</LinearLayout>
