<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/markerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:text="@string/markerName"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/locationNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints=""

        android:gravity="center_horizontal"
        android:inputType="text"

        android:labelFor="@id/locationNameInput"

        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:theme="@style/EditTextStyle" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/isHomeLocationSwitch"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/homeLocation"
        android:textColor="@color/colorAccent"
        android:textSize="22sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="48dp"
            android:layout_height="48dp"

            android:layout_alignParentStart="true"
            android:contentDescription="@string/no"

            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:scaleType="fitCenter"

            android:src="@drawable/cross" />

        <ImageButton
            android:id="@+id/yesButton"
            android:layout_width="48dp"
            android:layout_height="48dp"

            android:layout_alignParentEnd="true"
            android:contentDescription="@string/yes"

            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:scaleType="fitCenter"

            android:src="@drawable/checkmark" />
    </RelativeLayout>

</LinearLayout>
